--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Tata</string>
+    <string name="app_name">Chihiro</string>
     <string name="send">发送</string>
 </resources>
